Implemented templating logic for maps

--- a/sample_project/templates/example.html
+++ b/sample_project/templates/example.html
@@ -10,9 +10,6 @@
 
     { lipsum }
 
-    {% for i in items %}
-        <p>{i}</p>
-    {% endfor %}
-
+    {% map i from items -> <p>{i}</p> %}
 </body>
 </html>
