Errors are now relayed to browser if server is running

--- a/crest/resources/error_pages/templates/error.html
+++ b/crest/resources/error_pages/templates/error.html
@@ -12,6 +12,7 @@
         }
         .content {
             position: absolute;
+            color: red;
             left: 50%;
             top: 50%;
             text-align: center;
